Just for the record: another variant of footnote handling. This preserves the original Markdeep numbers with their endnote semantics (i.e. not starting anew from 1 on each page)

--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ code {
 }
 
 sup a .bindery-sup {  /* hide bindery footnote indicator */
-    /display: none;
+    display: none;
 }
 .endnote {
     display: none; /* hide original endnotes */
