--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700i&display=swap&subset=latin-ext');
 @import url('https://fonts.googleapis.com/css?family=Poppins:200,400,400i,700,700i,800&display=swap');
 @import url('01-iosevka-2.3.1/webfont.css');
+@import url('https://fonts.googleapis.com/css?family=PT+Sans+Narrow&display=swap');
 
 :root {
     --body-font: "PT Serif";
     --heading-font: "Poppins";
     --code-font: "Iosevka Web";
+    --reference-font: "PT Sans Narrow";
 }
 
 * {
@@ -50,7 +52,7 @@ body {
     /transform: rotate(-10deg);
 }
 
-.md h2 {
+.md h2, {
     font-size: 1.5em;
 }
 
@@ -150,6 +152,17 @@ code {
     margin: 0;
 }
 
+.longTOC a {
+    color: inherit !important;
+}
+
+
+
+a[href^="#citation"] {
+    font-family: var(--reference-font);
+    color: black !important;
+}
+
 
 /* bindery stuff */
 .📖-flow-box {
@@ -162,6 +175,10 @@ code {
     font-family: var(--heading-font);
 }
 
+a.footnote-reference sup {  /* TODO also apply this style to the footnote indexes in the actual footnotes */
+    color: black;
+    font-family: var(--reference-font);
+}
 .📖-footnote:first-child:before {
     content: "⸻";
     display: block;
