--- a/markdeep-thesis/style.css
+++ b/markdeep-thesis/style.css
@@ -14,7 +14,7 @@
     --fancyquote-font: "Aleo";
 
     --base-font-size: 10.5pt;
-    --small-font-size: 0.8em;
+    --small-font-size: 0.8rem;
     --inline-code-font-size: 0.97em;  /* since iosevka has a slightly higher x-height than pt serif */
     --code-listing-font-size: var(--small-font-size);
 
