--- a/markdeep-thesis/style.css
+++ b/markdeep-thesis/style.css
@@ -121,6 +121,14 @@ a.url {
     line-height: 1em;
     text-align: left;
 }
+.title-page .title-subtitle {
+    display: block;
+    font-family: var(--heading-font);
+    font-size: 2rem;
+    line-height: 1em;
+    text-align: left;
+    margin-top: 1rem;
+}
 .title-page .title-author {
     font-size: 1.5rem;
     margin: 2rem 0;
