--- a/markdeep-thesis/style.css
+++ b/markdeep-thesis/style.css
@@ -289,7 +289,7 @@ h4 + p,
 
 
 /* code listings */
-.md code {
+code, .md code {
     font-family: var(--code-font) !important;
     font-size: var(--inline-code-font-size);
 }
