Upgrade to Markdeep 1.07

--- a/markdeep-thesis/style.css
+++ b/markdeep-thesis/style.css
@@ -117,7 +117,7 @@ a.url {
     font-size: 1.25rem;
 }
 .title-page .title-institution-extra {
-
+    margin-top: 0.2rem;
 }
 .title-page .title-kind {
     font-size: 1.25rem;
