--- a/markdeep-thesis/reset.css
+++ b/markdeep-thesis/reset.css
@@ -49,9 +49,9 @@ body {
     margin:calc(20rem / var(--rf)) 0 calc(-10rem / var(--rf));
 }
 
-.md div.imagecaption,
-.md div.tablecaption,
-.md div.listingcaption {
+.md .imagecaption,
+.md .tablecaption,
+.md .listingcaption {
     margin: calc(7rem / var(--rf)) calc(5rem / var(--rf)) calc(12rem / var(--rf));
 }
 
